--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -545,7 +545,7 @@ A carência de tecnologia percebida no órgão lança um desafio para o período
 
 O atendimento das necessidades se dará por meio da criação de projetos no Portfólio de TI, que será o principal instrumento de planejamento operacional a ser monitorado e priorizado pelo Comitê de Governança Digital.
 
-## 7.1  Inventário de Necessudades Identificadas
+## 7.1  Inventário de Necessidades Identificadas
 
 ### 7.1.1 Necessidade de Serviços de TIC
 
@@ -553,40 +553,41 @@ São necessidades por serviços que envolvam soluções de Tecnologia da Informa
 
 | ID   | Necessidade                                                                                 | Descrição                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | Áreas Demandantes | 
 |------|---------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------| 
-| NS1  | Acompanhamento de rendimento por servidor vinculado ao SEI                                  |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SPOA             | 
-| NS2  | Acompanhamento e controle de saldos das notas de empenho e saldos de contratos - SIMINC     |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SPOA             | 
-| NS3  | Acompanhamento histórico de tramitações                                                     |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SPOA             | 
-| NS4  | Banco de informações das fichas de monitoramento e coleta das metas do PNC                           |                                                       | SDAPI            | 
-| NS5  | Base de Dados integrada ao Sistema de Registro de Direitos Autorais                         |                                                                                                                                                                                                                                                                                                                                                                                                                                        | SDAPI             | 
+| NS1  | Disponibilizar mecanismo para acompanhar o rendimento de servidor vinculado ao SEI                                  |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SPOA             | 
+| NS2  |  Disponibilizar mecanismo para acompanhar e controlar saldos das notas de empenho e saldos de contratos - SIMINC     |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SPOA             | 
+| NS3  | Disponibilizar mecanismo para acompanhar histórico de tramitações                                                     |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SPOA             | 
+| NS4  | Banco de dados informações das fichas de monitoramento e coleta das metas do PNC                           |                                                       | SDAPI            | 
+| NS5  | Base de dados integrada ao Sistema de Registro de Direitos Autorais                         |                                                                                                                                                                                                                                                                                                                                                                                                                                        | SDAPI             | 
 | NS6  |                         |                                                                                                                                                                                                                                                                                                                                         | SDAPI            | 
 | NS7  | Suporte técnico para utilização do Delibera na Plataforma do CNPC durante a realização de Consultas Públicas e Debates                                                                            |                                                                                                                                                                                                                                                                                                                                                                                                                                           | SDAPI            | 
-| NS8  | Controle de concessão de cartões de acesso dos servidores ao prédio e garagem               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SPOA             | 
-| NS9  | Sistema de controle das informações relacionadas a fiscalização e gestão de contratos                                                       |                                                                                                                                                                                                                                                                                                                                                                                             | SPOA             | 
-| NS10 |                                             |                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | SDAPI            | 
-| NS11 | Sistema de cadastro de proponentes                                       |                                                                                                                                                                                                                                                                                                                                                                                                                                         | SDC               | 
-| NS12 | Sistema de cadastro das irregularidades nas prestações de contas                       |                                                                                                                                                                                                              | GM               | 
-| NS13 | Sistema de gestão de Pessoas                                                                           |                                                                                                                                                                                                                                                                                                     | SGE              | 
-| NS14 | Integração do Sistema de Ouvidoria ao e-Ouv (CGU)                                           |                                                                                                                                                                                                                                                                                                                                                                                                                 | GM, SPOA         | 
-| NS15 | Integração dos bancos de dados do MEC aos da Política Nacional de Cultura Viva              |                                                                                                                                                                                                                                                                                                       | SDC              | 
-| NS16 | Customização do Mapa da Cultura para Mapa do Sistema Nacional de Cultura                                                        |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | SDAPI            | 
-| NS17 | Melhorias no Sistema SolicitaNet.                                                            |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | SPOA             | 
-| NS18 | Melhorias na Plataforma Rede Cultura Viva                                         |                                                                                                                                                                                                                                                                                                           | SDC              | 
-| NS19 | Melhorias no Sistema ePraças                                                                |                                                                                                                                                                                                                                                                                                                                                                 | SEINFRA          | 
-| NS20 | Desenvolvimento do módulo do Sistema de Registro e Gestão de Direitos Autorais                                                     |                                                                                                                                                                                                                                                                                                                                     | SDAPI             | 
-| NS21 | Desenvolvimento de módulo do Sistema de Gestão Coletiva voltado à habilitação das entidades                   |                                                                                                                                                                                                                                                                                                                                               | SDAPI             | 
-| NS22 | Monitoramento das informações dos planos estaduais e municipais                             |                                                                                                                                                                                                                                                                                                                                                                                     | SDAPI            | 
-| NS23 | Painel de indicadores do PNC                                                                |                                                                                                                                                                                      | SDAPI            | 
-| NS24 | Desenvolvimento de Plataforma do Sistema Nacional de Cultura para o processo de adesão, chamamentos públicos e tutoriais em EAD                                                 |                                                                                                                                                                                                                                                                                                                                                                                                                       | SDAPI            | 
+| NS8  | Sistema para controle de concessão de cartões de acesso dos servidores ao prédio e garagem               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SPOA             | 
+| NS9  | Sistema para controle das informações relacionadas a fiscalização e gestão de contratos                                                       |                                                                                                                                                                                                                                                                                                                                                                                             | SPOA             | 
+| NS10 |                                             |                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | SDAPI, SDC            | 
+| NS11 | Sistema para cadastro de proponentes                                       |                                                                                                                                                                                                                                                                                                                                                                                                                                         | SDC               | 
+| NS12 | Sistema para cadastro das irregularidades nas prestações de contas                       |                                                                                                                                                                                                              | GM               | 
+| NS13 | Sistema para gestão de pessoas                                                                           |                                                                                                                                                                                                                                                                                                     | SGE              | 
+| NS14 | Intregar Sistema de Ouvidoria ao e-Ouv (CGU)                                           |                                                                                                                                                                                                                                                                                                                                                                                                                 | GM, SPOA         | 
+| NS15 | Integrar bancos de dados do MEC aos da Política Nacional de Cultura Viva              |                                                                                                                                                                                                                                                                                                       | SDC              | 
+| NS16 | Customizar Mapa da Cultura para Mapa do Sistema Nacional de Cultura                                                        |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | SDAPI            | 
+| NS17 | Promover melhorias no Sistema SolicitaNet.                                                            |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | SPOA             | 
+| NS18 | Promover melhorias na Plataforma Rede Cultura Viva                                         |                                                                                                                                                                                                                                                                                                           | SDC              | 
+| NS19 | Promover melhorias no Sistema ePraças                                                                |                                                                                                                                                                                                                                                                                                                                                                 | SEINFRA          | 
+| NS20 | Desenvolver módulo do Sistema de Registro e Gestão de Direitos Autorais                                                     |                                                                                                                                                                                                                                                                                                                                     | SDAPI             | 
+| NS21 | Desenvolver módulo do Sistema de Gestão Coletiva voltado à habilitação das entidades                   |                                                                                                                                                                                                                                                                                                                                               | SDAPI             | 
+| NS22 | Desenvolver solução de monitoramento das informações dos planos estaduais e municipais                             |                                                                                                                                                                                                                                                                                                                                                                                     | SDAPI            | 
+| NS23 | Desenvolver Painel de indicadores do PNC                                                                |                                                                                                                                                                                      | SDAPI            | 
+| NS24 | Desenvolver Plataforma do Sistema Nacional de Cultura para o processo de adesão, chamamentos públicos e tutoriais em EAD                                                 |                                                                                                                                                                                                                                                                                                                                                                                                                       | SDAPI            | 
 | NS25 |  Implementar acessibilidade e usabilidade no Portal da Rouanet                                                                                    |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SEFIC             | 
-| NS25.1 | Desenvolvimento do Portal do Investidor                                                                                      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SEFIC             | 
-| NS26 | Preparação do Mapas Culturais para Premiação de Iniciativas Socioculturais das Praças CEUs  | Desenvolver as configurações necessárias para usar o módulo de oportunidades do Mapas para a operacionalização do Edital de Premiação de Iniciativas Socioculturais das Praças CEUs                                                                                                                                                                                                                                                                                                                                                                                         | SEINFRA,          | 
-| NS27 | Processo eleitoral do CNPC                                                                  | Ativar a plataforma do Vota Cultura e realizar as melhorias necessárias para utilização da Plataforma durante o processo eleitoral do CNPC                                                                                                                                                                                                                                                                                                                                                                                                                                  | SDAPI,            | 
-| NS28 | Provedor Dinâmico de Informações                                                            | Desenvolvimento de uma plataforma web que disponibilize ao usuário repositório de jurisprudências com a temática de direitos autorais, artigos acadêmicos, teses de mestrado/doutorado, legislação com buscador, pareceres e decisões da SDAPI/MinC, recursos didáticos audiovisuais, realize a gestão de consultas públicas das matérias da SDAPI etc.                                                                                                                                                                                                                     | SDAPI             | 
-| NS29 | Publicação na Intranet                                                                      | Liberação de Acesso para que a COGEP possa publicar conteúdos correlatos a área na Intranet, com os treinamentos necessários, com o objetivo de aperfeiçoamento na comunicação entre a coordenação e os servidores do Minc. Ressalta-se que a ASCOM liberou o acesso mas a parte técnica e treinamento não foram providenciados pela CGTEC.                                                                                                                                                                                                                                 | SGE,              | 
-| NS30 | Reformulação do Portal institucional                                                        | Desenvolvimento de sistema                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | SEFIC, GM, SGE    | 
-| NS31 | Sistema cadastral para proponentes                                                          | Tal cadastro central daria celeridade a diversos processos no ministério                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | SDC,              | 
-| NS32 | Sistema de capacitação                                                                      | Realizar o controle dos cursos ofertados pelo MinC (monitoramento, informações do curso, valores, entre outros), bem como o registro das capacitações realizadas pelos servidores em cada exercício. Fornecer informações orçamentárias, relatórios, gráficos; quantitativo de capacitações realizadas por servidor, descrição das capacitações, tipo da capacitação, instituição promotora e custo. Permitir a realização da Avaliação de Reação/Impacto das capacitações (envio de formulário eletrônico ao término das capacitações ofertadas pelo MinC aos servidores). | SGE,              | 
-| NS33 | Sistema de Controlar de atendimentos telefonicos                                            | Necessário software de controle de atendimentos telefônicos e presenciais                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | GM, SGE,          | 
+| NS25.1 | Desenvolver Portal do Investidor                                                                                      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | SEFIC             | 
+| NS26 | Desenvolver módulo de oportunidades no Mapas Culturais para Premiação de Iniciativas Socioculturais das Praças CEUs  |                                                                                                                                                                                                                                                                                                                                                                                      | SEINFRA          | 
+| NS27 |  Implementar melhorias para utilização da Plataforma durante o processo eleitoral do CNPC                                                                 |                                                                                                                                                                                                                                                                                                                                                                                                                                   | SDAPI            | 
+| NS28 | Desenvolver plataforma que disponibilize e realize a gestão de repositório de jurisprudências relativas aos direitos autorais, artigos acadêmicos, teses de mestrado/doutorado, legislação, pareceres e decisões da SDAPI/MinC                                                        |                                                                                                                                                                                                                      | SDAPI             | 
+| NS29 | Disponibilizar acesso e treinamento à COGEP para publicação de conteúdos na intranet                                                                  |                                                                                                                                                                                                                         | SGE              | 
+| NS30 | Reformular Portal institucional                                                        |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | SEFIC, GM, SGE    | 
+| NS31 |                                                     |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |            | 
+| NS32 | Disponibilizar sistema de gestão de capacitação                                                                      | 
+| SGE              | 
+| NS33 | Disponivilizar sistema para controle de atendimentos telefônicos e presenciais                                            |                                                                                                                                                                                                                                                                                                    | GM, SGE          | 
 | NS34 | Sistema de controle de reembolsos                                                           | Realizar o registros de lançamentos de reembolsos;  alertar sobre prazos para cobranças aos servidores relativos às regras estabelecidas na legislação do Programa de Incentivos Educacionais do MinC. Realizar controle orçamentário, emitir relatórios e gráficos.                                                                                                                                                                                                                                                                                                        | SGE,              | 
 | NS35 | Sistema de endomarketing                                                                    | Desenvolvimento de Sistema                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | SEFIC             | 
 | NS36 | Sistema de estágio probatório                                                               | Realizar o controle de servidores que devem ser submetidos às avaliações de estágio probatório, bem como enviar alertas sobre proximidade dos prazos para realização das avaliações pelas chefias imediatas. Além disso, realizar cálculo da nota final. Espera-se que o sistema seja capaz de que as chefias realizem as avaliações em formulário eletrônico, sem necessidade de envio em forma física.                                                                                                                                                                    | SGE,              | 
